--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@redwoodjs/api": "8.8.0",
-    "@redwoodjs/graphql-server": "8.8.0"
+    "@redwoodjs/graphql-server": "8.8.0",
+    "axios": "^1.11.0",
+    "socket.io": "^4.8.1"
   }
 }
