--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
       "web"
     ]
   },
+  "scripts": {
+    "dev": "concurrently \"yarn rw dev\" \"ts-node api/src/socketServer.ts\""
+  },
   "devDependencies": {
     "@redwoodjs/core": "8.8.0",
     "@redwoodjs/project-config": "8.8.0"
@@ -18,10 +21,17 @@
     "node": "=20.x"
   },
   "prisma": {
-    "seed": "yarn rw exec seed"
+    "seed": "yarn rw exec seed",
+    "graphql": "^8.8.0"
   },
-  "packageManager": "yarn@4.6.0",
+  "packageManager": "yarn@1.22.22",
   "resolutions": {
-    "@storybook/react-dom-shim@npm:7.6.20": "https://verdaccio.tobbe.dev/@storybook/react-dom-shim/-/react-dom-shim-8.0.8.tgz"
+    "graphql": "8.8.0"
+  },
+  "dependencies": {
+    "@uiw/react-markdown-preview": "^5.1.5",
+    "@uiw/react-md-editor": "^4.0.8",
+    "apollo-server-express": "^3.13.0",
+    "yarn": "^1.22.22"
   }
 }
